tests/models/struct/u64/fail/expected.rs
use dade::model;
#[model]
struct TestModel {
    #[field(expected = "value")]
    value: u64,
}
fn main() {}
